--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "personal blog"
 
 email: ganni4@gmail.com
 #blog logo
-logo: "/assets/images/df_logo.jpg"
+logo: "/assets/images/ganni-eye.png"
 # blog cover
 cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
