--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ twitter_username: ganni4
 github_username:  ganni
 disqus_shortname: gannigithubio
 google_analytics: UA-3158208-9
+chat: TRUE
 
 # Build settings
 markdown: kramdown
