--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ twitter_username: ganni4
 github_username:  ganni
 disqus_shortname: gannigithubio
 google_analytics: UA-3158208-9
-chat: TRUE
+chat: false
 
 # Build settings
 markdown: kramdown
